--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
         include-prerelease: true
         
     - name: publish
-      run: dotnet publish -c release
+      run: dotnet publish NotBoosty.csproj -c Release --output release --nologo
       
     - name: Change base-tag in index.html from / to the necessary
       run: sed -i 's/<base href="\/" \/>/<base href="\/NotBoosty\/" \/>/g' release/wwwroot/index.html
