--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,12 @@ jobs:
         dotnet-version: '6.0.x'
         include-prerelease: true
         
+    - name: install wasm-tools
+      run: dotnet workaload install wasm-tools
+
+    - name: workaload repair
+      run: dotnet workaload repair
+      
     - name: publish
       run: dotnet publish NotBoosty.csproj -c Release --output release --nologo
       
