--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
     - name: Setup .NET 6
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: '6.0.28'
+        dotnet-version: '6.0.x'
         
     - name: Setup wasm-tools
       uses: bytecodealliance/actions/wasm-tools/setup@v1
