--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,14 +7,18 @@ on:
 
 jobs:
   deployment:
+    # use ubuntu-latest image to run steps on
     runs-on: ubuntu-latest
     steps:
+    # uses GitHub's checkout action to checkout code form the master branch
     - uses: actions/checkout@v2
     
-    - name: Setup .NET 6
+    # sets up .NET Core SDK 3.1
+    - name: Setup .NET Core SDK
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: '6.0.x'
+        dotnet-version: 3.1
+
         
     - name: Setup wasm-tools
       uses: bytecodealliance/actions/wasm-tools/setup@v1
